--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "discord_tool_bot",
   "version": "1.0.0",
-  "description": "For Me!",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "自分用に作っているいろんなツールが詰まったDiscordBOTです。",
+  "homepage": "https://github.com/mendoitarou/Discord_Tool_Bot#readme",
+  "bugs": {
+    "url": "https://github.com/mendoitarou/Discord_Tool_Bot/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mendoitarou/Discord_Tool_Bot.git"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
+  "author": "",
   "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/mendoitarou/Discord_Tool_Bot/issues"
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/mendoitarou/Discord_Tool_Bot#readme",
   "dependencies": {
-    "@discordjs/voice": "github:discordjs/voice",
-    "discord.js": "^14.20.0"
+    "@discordjs/voice": "^0.18.0",
+    "discord.js": "^14.21.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "eslint": "^9.31.0"
   }
 }
